--- a/Carousel-Slider-01.html
+++ b/Carousel-Slider-01.html
@@ -71,7 +71,7 @@
                <div class="row">
                   <div class="col-lg-8 offset-lg-2 text-center">
                      <div class="hero-caption">
-                        <h2>We Provide Many Kind of Technology Solutions</h2>
+                        <h2 class="wow fadeInUp">We Provide Many Kind of Technology Solutions</h2>
                         <p>Lorem ipsum dolor sit amet,
                            consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                            labore et dolore magna aliqua, magna aliqua. ipsum is simply dummy text of the printing.
