--- a/Carousel-Slider-01.html
+++ b/Carousel-Slider-01.html
@@ -42,6 +42,8 @@
                      <div class="hero-caption">
                         <h2> IT Solutions & Business
                            Services Company </h2>
+                        <h1 class="animate__fadeInUp"> IT Solutions & Business
+                           Services Company </h1>
                         <p>Lorem ipsum dolor sit amet,
                            consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                            labore et dolore magna aliqua, magna aliqua. ipsum is simply dummy text of the printing.
@@ -76,26 +78,14 @@
                            consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                            labore et dolore magna aliqua, magna aliqua. ipsum is simply dummy text of the printing.
                         </p>
-                        <div class="hero-btn">
-                           <button class="default-btn-two">
-                              <a href="it-solution.html"> <span class="circle" aria-hidden="true">
-                                    <span class="icon arrow"></span>
-                                 </span>
-                                 <span class="button-text">It Solution</span></a>
-                           </button>
-                           <button class="default-btn-two">
-                              <a href="contact.html"> <span class="circle" aria-hidden="true">
-                                    <span class="icon arrow"></span>
-                                 </span>
-                                 <span class="button-text">Contact Us</span></a>
-                           </button>
-                        </div>
                      </div>
                   </div>
                </div>
             </div>
          </div>
       </div>
+
+
    </section>
    <!---------------End-hero-Area ------------------------->
 
